Updated hero image, set aspect ratio for images, new responsive grid layout for listjackets page,

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <main class="homepage-main">
         <section class="hero">
-            <a href="listjackets.html"><img src="images/hero-image-edited.png" alt="Shop our new collection"/> </a>
+            <a href="listjackets.html"><img src="images/hero-image-text.jpg" alt="Shop our new collection"/> </a>
         </section>
         <section class="jacket-cards">
             <div>
