Deleted the checkout completed image and added more information about the order

--- a/checkoutcomp.html
+++ b/checkoutcomp.html
@@ -32,10 +32,24 @@
     </ul>
     </nav>
   </header>
-    <section>
-    <img src="images/order-placed-image.png" alt="Your order has been placed! Thank you for shopping from Rainy Days! 
-    Your order confirmation has been sent to your e-mail." class="checkout-image">
-  </section>
+  <main class="checkout-main">
+    <div>
+      <h1>Your order has been placed!</h1>
+      <h3>Thank you for shopping from Rainy Days! Your order confirmation has been sent to your e-mail. </h3>
+      <a href="listjackets.html" class="contshp"><p>Continue shopping</p></a>
+    </div>
+    <br>
+    <div class="placed-order">
+      <h3>Order summary:</h3>
+      <img src="images/RainyDays_Jacket7.jpg" alt="Picture of jacket">
+            <p>Rainy Days VitaForce Jacket</p>
+            <p>Size: M</p>
+            <p>Colour: Green</p>
+            <p>Qnt: 1</p>
+            <p>Price: 124,99$</p>
+            <h3>Total: 124,99$</h3>
+    </div>
+</main>
   <footer>
     <div>
         <h6 class="footertxt"><a class="footerlink" href=contact.html>Helpcenter</h6></a>
