Fixed footer links and navigation links flagged as errors by W3 validator

--- a/jacket.html
+++ b/jacket.html
@@ -17,12 +17,10 @@
 <body>
     <header>
         <input type="checkbox" id="nav-box">
-        <label for="nav-box"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAA
-            CXBIWXMAAAsTAAALEwEAmpwYAAAAOUlEQVR4nO3VsQkAMAwDQe0/VrzQb5BMkMLgkOYPVBsEwomkaUAB+3Hq1+E13ph05ZykMfid
-            JKXnAFL2T3AnCaPBAAAAAElFTkSuQmCC" class="hamburger-nav"></label>
+        <label for="nav-box"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAOUlEQVR4nO3VsQkAMAwDQe0/VrzQb5BMkMLgkOYPVBsEwomkaUAB+3Hq1+E13ph05ZykMfidJKXnAFL2T3AnCaPBAAAAAElFTkSuQmCC" class="hamburger-nav" alt="navbox"></label>
         <nav>
             <ul class="menu">
-                <a href=index.html><img src="images/logo_blue_background.JPG"  alt="Rainy Days logo" class="logo"width="200"/> </a>
+                <a href=index.html><img src="images/logo_blue_background.JPG"  alt="Rainy Days logo" class="logo" width="200"/> </a>
                 <li><a class="hnavtxt" href=listjackets.html>Women</a></li>
                 <li><a class="hnavtxt" href=listjackets.html>Men</a></li>
                 <li><a class="hnavtxt" href=about.html>About</a></li>
@@ -71,16 +69,16 @@
     </main>
     <footer>
         <div>
-            <h6 class="footertxt"><a class="footerlink" href=contact.html>Helpcenter</h6></a>
-            <p class="footertxt"><a class="footerlink" href=contact.html>Contact us</p></a>
+            <a class="footerlink" href=contact.html><h6 class="footertxt">Helpcenter</a></h6>
+            <a class="footerlink" href=contact.html><p class="footertxt">Contact us</a></p>
             <p class="footertxt">Terms & conditions</p>
             <p class="footertxt">Shipping</p>
             <p class="footertxt">Returns</p>
             <p class="footertxt">Payment</p>
         </div>
         <div>
-            <h6 class="footertxt"><a class="footerlink" href=about.html>About</h6></a>
-            <p class="footertxt"><a class="footerlink" href=about.html>Our story</p></a>
+            <a class="footerlink" href=about.html><h6 class="footertxt">About</a></h6>
+            <a class="footerlink" href=about.html><p class="footertxt">Our story</a></p>
             <p class="footertxt">Store locator</p>
             <p class="footertxt">Join our team</p>
             <p class="footertxt">Cookie policy</p>
