--- a/checkout.html
+++ b/checkout.html
@@ -73,13 +73,13 @@
   </main>
   <footer>
     <div>
-        <a class="footerlink" href=contact.html><h6 class="footertxt">Helpcenter</a></h6>
-        <a class="footerlink" href=contact.html><p class="footertxt">Contact us</a></p>
-        <p class="footertxt">Terms & conditions</p>
-        <p class="footertxt">Shipping</p>
-        <p class="footertxt">Returns</p>
-        <p class="footertxt">Payment</p>
-    </div>
+      <a class="footerlink" href=contact.html><h6 class="footertxt">Helpcenter</h6></a>
+      <a class="footerlink" href=contact.html><p class="footertxt">Contact us</p></a>
+      <p class="footertxt">Terms & conditions</p>
+      <p class="footertxt">Shipping</p>
+      <p class="footertxt">Returns</p>
+      <p class="footertxt">Payment</p>
+  </div>
     <div>
         <a class="footerlink" href=about.html><h6 class="footertxt">About</a></h6>
         <a class="footerlink" href=about.html><p class="footertxt">Our story</a></p>
