--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     </main>
     <footer>
         <div>
-            <a class="footerlink" href=contact.html><h6 class="footertxt">Helpcenter</a></h6>
-            <a class="footerlink" href=contact.html><p class="footertxt">Contact us</a></p>
+            <a class="footerlink" href=contact.html><h6 class="footertxt">Helpcenter</h6></a>
+            <a class="footerlink" href=contact.html><p class="footertxt">Contact us</p></a>
             <p class="footertxt">Terms & conditions</p>
             <p class="footertxt">Shipping</p>
             <p class="footertxt">Returns</p>
