Nesting issues in footer

--- a/checkout.html
+++ b/checkout.html
@@ -32,7 +32,7 @@
 </header>
   <main>
     <h1>Complete checkout</h1>
-    <p><a class="contshp" href=listjackets.html> Not finished yet? Continue shopping</p></a>
+    <a class="contshp" href=listjackets.html><p>Not finished yet? Continue shopping</p></a>
     <fieldset class="checkoutfield">
       <legend>Your info:</legend>
       <label for="fname">First name</label>
@@ -81,8 +81,8 @@
       <p class="footertxt">Payment</p>
   </div>
     <div>
-        <a class="footerlink" href=about.html><h6 class="footertxt">About</a></h6>
-        <a class="footerlink" href=about.html><p class="footertxt">Our story</a></p>
+        <a class="footerlink" href=about.html><h6 class="footertxt">About</h6></a>
+        <a class="footerlink" href=about.html><p class="footertxt">Our story</p></a>
         <p class="footertxt">Store locator</p>
         <p class="footertxt">Join our team</p>
         <p class="footertxt">Cookie policy</p>
