--- a/checkoutcomp.html
+++ b/checkoutcomp.html
@@ -58,8 +58,8 @@
     <p class="footertxt">Payment</p>
 </div>
   <div>
-      <a class="footerlink" href=about.html><h6 class="footertxt">About</a></h6>
-      <a class="footerlink" href=about.html><p class="footertxt">Our story</a></p>
+      <a class="footerlink" href=about.html><h6 class="footertxt">About</h6></a>
+      <a class="footerlink" href=about.html><p class="footertxt">Our story</p></a>
       <p class="footertxt">Store locator</p>
       <p class="footertxt">Join our team</p>
       <p class="footertxt">Cookie policy</p>
